fix: edit spacing on lists

--- a/src/styles/rich-text.css
+++ b/src/styles/rich-text.css
@@ -111,7 +111,7 @@
 
 .rich-text ul,
 .rich-text ol {
-  @apply mx-auto mb-y;
+  @apply mx-auto mb-ydouble;
 }
 
 .rich-text.inventory ul {
